Fix horizontal scrollbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,6 @@
 
 body {
     height: calc(100vh - 65px);
-    width: 100vw;
 }
 
 body > nav .dropdown-menu {
